--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link rel="stylesheet" href="Handout_5G.css">
 </head>
-<body style="background-image: url('5G_bg_lowlow.png');">
+<body style="background-image: url('./5G_bg_lowlow.png');">
 
 	<svg id="Layer_8" data-name="Layer 8" style="width: 25%; margin-left: auto; margin-right: auto; display: block; margin-bottom: 2vw; margin-top: 2vw; filter: drop-shadow(0 0.6rem 0.6rem rgba(0, 0, 0, 0.6));" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.81 53.33"><defs><style>.cls-8{fill:#007bff;}</style></defs><path class="cls-8" d="M4.28,43.78l0-.49h9.63l.07.24c.74,3.73,4.22,6.72,9,6.72A8.87,8.87,0,0,0,32.19,41V40.9A8.81,8.81,0,0,0,23,31.72a9.61,9.61,0,0,0-6.43,2.18,9,9,0,0,0-2.36,2.81H5.09l2.35-30H39.15v8.44H15.7L14.44,29.58h.63c2-3.41,6-5.52,10.83-5.52,9.45,0,16.28,7,16.28,16.63v.07c0,10.68-7.88,18-19.27,18C12.05,58.72,4.87,52.25,4.28,43.78Z" transform="translate(-4.24 -5.39)"/><path class="cls-8" d="M50.23,32V32c0-16.28,9.31-26.58,24.08-26.58,12,0,20.74,6.89,22.25,17l.07.35H86.08L86,22.41c-1.44-5-5.76-8-11.7-8-8.19,0-13.26,6.68-13.26,17.47v.07c0,11,5.31,17.79,13.68,17.79,7,0,11.74-4.25,12-10.65l0-1h-11V30.39h21.3v6.43c0,13.46-8.64,21.9-22.5,21.9C59.47,58.72,50.23,48.56,50.23,32Z" transform="translate(-4.24 -5.39)"/><filter id="shadow">
       <feDropShadow dx="0.2" dy="0.4" stdDeviation="0.2"/>
